Implementação da função PUT, que atualiza o usuario existente
